@@ -334,7 +334,7 @@ char * wzd_cache_gets(wzd_cache_t * c, char *buf, unsigned int size)
     if (c->current_location >= cache->datasize) return NULL;
     memcpy(buffer,cache->data+c->current_location,size_to_read);
 /*    c->current_location += size_to_read;*/
-    while (--size>0 && (_c=(*ptr++)) != EOF)
+    while (--size>0 && (_c=(*ptr++)) != (char)EOF)
     {
       if ( (*dst++ = _c)=='\n' )
         break;
@@ -354,7 +354,7 @@ char * wzd_cache_gets(wzd_cache_t * c, char *buf, unsigned int size)
     }
     c->current_location += size_to_read;
     *dst=0;
-    if (_c==EOF && ptr==buf) return NULL;
+    if (_c==(char)EOF && ptr==buf) return NULL;
 /*    lseek(fd,position + (dst-buf), SEEK_SET );*/
     c->current_location = position + (dst-buf);
 
@@ -369,7 +369,7 @@ char * wzd_cache_gets(wzd_cache_t * c, char *buf, unsigned int size)
     size_to_read = (size<4096)?size:4096;
     ret = read(fd,buffer,size_to_read);
     if (ret <= 0) return NULL;
-    while (--size>0 && (_c=(*ptr++)) != EOF)
+    while (--size>0 && (_c=(*ptr++)) != (char)EOF)
     {
       if ( (*dst++ = _c)=='\n' )
         break;
@@ -381,7 +381,7 @@ char * wzd_cache_gets(wzd_cache_t * c, char *buf, unsigned int size)
       }
     }
     *dst=0;
-    if (_c==EOF && ptr==buf) return NULL;
+    if (_c==(char)EOF && ptr==buf) return NULL;
     (void)lseek(fd,position + (dst-buf), SEEK_SET );
     /* update current_location */
     c->current_location += strlen(buf);
