@@ -1,3 +1,8 @@
+2004-09-08  Pierre Chifflier  <pollux@cpe.fr>
+
+	* bugfix: wzdftpd broken on debian arm, ppc and s390 (Thanks to zentor)
+	* bugfix: missing va_end when using va_start
+
 2004-08-31  Pierre Chifflier  <pollux@cpe.fr>
 
 	* bugfix: segfault when deleting symlink with non-existent target
